--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ postgres = {version = "0.16.0-rc.2",features=["with-serde_json-1"]}
 serde_json = "1.0.40"
 rust_decimal = { version = "1.0.3", features = ["postgres"] }
 rustc-serialize = "0.3.18"
-chrono = "0.4"
+chrono = { version = "0.4", features = ["serde"] }
 
 [[bin]]
 name = "orderBook"
