--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,8 @@ serde_json = "1.0.40"
 rust_decimal = { version = "1.0.3", features = ["postgres"] }
 rustc-serialize = "0.3.18"
 chrono = { version = "0.4", features = ["serde"] }
+ring = "0.14.6"
+
 
 [[bin]]
 name = "orderBook"
