--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ kafka = "0.8"
 # rdkafka = { git = "https://github.com/fede1024/rust-rdkafka.git", branch = "master", features = ["cmake-build"] }
 ## rdkafka = { version = "0.23", features = ["cmake-build"] }
 tokio = { version = "0.2.2", features = ["full"] }
-futures = "0.3"
+## futures = "0.3"
 log = "0.4.0"
 env_logger = "0.7.1"
 
@@ -34,6 +34,12 @@ rust_decimal = { version = "1.0.3", features = ["postgres"] }
 rustc-serialize = "0.3.18"
 chrono = { version = "0.4", features = ["serde"] }
 ring = "0.14.6"
+async-std = "1.6.0"
+#futures = "=0.3.2"
+#futures-util = "=0.3.2"
+#futures-macro = "=0.3.2"
+futures = { version = "=0.3.5", features = ["compat"] }
+
 
 [[bin]]
 name = "mist-engine-rs"
